[project]
name = "bmc"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "detecta>=0.0.5",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyter-contrib-nbextensions>=0.7.0",
    "marimo>=0.23.9",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "optcutfreq>=0.0.8",
    "pandas>=3.0.3",
    "psd2>=0.0.4",
    "pyversions>=0.0.3",
    "rise>=5.7.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "sympy>=1.14.0",
    "tnorma>=0.0.3",
    "watermark>=2.6.0",
]
