[project]
name = "bmc"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "detecta>=0.0.5",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyter-contrib-nbextensions>=0.7.0",
    "jupyterlab>=4.6.1",
    "marimo>=0.23.9",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "optcutfreq>=0.0.8",
    "pandas>=3.0.3",
    "psd2>=0.0.4",
    "pydantic-ai-slim>=2.15.0",
    "pyversions>=0.0.3",
    "rise>=5.7.1",
    "ruff>=0.15.16",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "sympy>=1.14.0",
    "tnorma>=0.0.3",
    "watermark>=2.6.0",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test*.py"]
